--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,133 @@
 </head>
 
   <body>
+    <div class="whole">
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+  <div class="top">
+  <div class="nar">
 
+
+  
+    
+  <a class="lists">Services</a>
+  
+  <a class="lists">Product</a>
+  
+  <a class="lists">Vision</a>
+  
+  <a class="lists">Features</a>
+  
+  <a class="lists">About</a>
+  
+  <a class="lists">Contact</a>
+ 
+  
+
+  </div>
+
+  
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
+
+
+</div>
+ 
+  <div class="firstinline">
+  
+  <div class="PO1">
+
+  <h1>
+  Innovation<br />
+  On<br />
   Demand
+  </h1>
 
-  Get Started
+  <button type="button">Get Started</button>
+</div>
 
+<div class="PO2">
   <img src="img/header-img.png" alt="Image of a code snippet.">
+</div>
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</div>
+ 
+
+  <hr class="linetop" />
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+
+  <div class="secondinline">
+
+  <div class="P1">
+  <h3>Features</h3>
+
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>  
+  
+  <div class="P2">
+  <h3>About</h3>
+
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>  
+
+  </div>
+
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
+  <div class="thirdinline">
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <div class="P3">
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <h3>Services</h3>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-
-  Copyright Great Idea! 2018
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   
+</div>
+
+  <div class="P4">
+  
+    <h3>Product</h3>
+
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  
+</div>  
+
+  <div class="P5">
+  
+    <h3>Vision</h3>
+  
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+</div>
+
+</div> 
+
+
+<footer>
+<div>
+<hr class="linebottom" />
+  <h3>Contact</h3>
+
+  <address>
+  <p>123 Way 456 Street</p>
+  <p>Somewhere, USA</p>
+</address>
+
+  <div class="phonenumber">
+  <p>1 (888) 888-8888</p>
+  </div> 
+  <p>sales@greatidea.io</p>
+
+
+</div>
+
+</footer>
+
+<div class="copyright"> 
+Copyright Great Idea! 2018
+</div> 
+
+</div>
   </body>
 </html>
